--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "scripts": {
     "start": "http-server src/form",
     "test": "cucumber-js tests -f json:cucumber_report.json",
+    "ci": "concurrently --kill-others \"yarn start\" \"yarn test\"",
     "report": "yarn test && node tools/report.js && open reports/index.html"
   },
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
+    "concurrently": "^5.3.0",
     "cucumber": "^6.0.5",
     "cucumber-html-report": "^0.6.5",
+    "http-server": "^0.12.3",
     "nightmare": "^3.0.2",
     "prettier": "2.1.1"
   }
