--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
     "start": "http-server src/form",
-    "test": "cucumber-js tests -f json:cucumber_report.json",
+    "test": "sleep 5 && cucumber-js tests -f json:cucumber_report.json",
     "ci": "concurrently --kill-others \"yarn start\" \"yarn test\"",
     "report": "yarn test && node tools/report.js && open reports/index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sleep": "^6.3.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "concurrently": "^5.3.0",
